# xRate

./: .env.example  .gitignore  .pre-commit-config.yaml  BUGS_FIXED.md  CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_CHECKLIST.md  GIT_PUSH_GUIDE.md  Makefile  README.md  RUN_PROJECT.md  learn_python_by_this_code.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: security.yml
ci/github/workflows/: python.yml
data/: last_state.json
deploy/: README.md  SERVER_DEPLOYMENT.md  deploy.sh  supervisor-xrate.conf  xrate.service
docs/: API_PROVIDERS.md  ARCHITECTURE.md  CRAWLER_LOGIC.md
scripts/: add_file_paths.py  check_instance.sh  diag.sh  migrate_structure.py  run.sh  stop.sh
src/xrate/: __init__.py  __main__.py  app.py
src/xrate/adapters/: __init__.py
src/xrate/adapters/ai/: __init__.py  avalai.py
src/xrate/adapters/crawlers/: __init__.py  alanchand_crawler.py  base.py  bonbast_crawler.py
src/xrate/adapters/formatting/: __init__.py  formatter.py
src/xrate/adapters/persistence/: __init__.py  admin_store.py  file_store.py
src/xrate/adapters/providers/: __init__.py  base.py  brsapi.py  fastforex.py  navasan.py  wallex.py
src/xrate/adapters/telegram/: __init__.py  bot.py  handlers.py  jobs.py
src/xrate/application/: __init__.py  crawler_service.py  health.py  rates_service.py  state_manager.py  stats.py
src/xrate/config/: __init__.py  settings.py
src/xrate/domain/: __init__.py  errors.py  models.py
src/xrate/shared/: __init__.py  language.py  logging_conf.py  rate_limiter.py  validators.py
tests/: test_formatter.py  test_providers.py  test_rates_service.py
